versioned_docs/version-4.0/client-api/data-subscriptions/creation/content/_examples-java.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

In this page:  

[Create subscription on all documents in a collection](../../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-on-all-documents-in-a-collection)  
[Create subscription with filtering](../../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering)  
[Create subscription with filtering and projection](../../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-filtering-and-projection)  
[Create subscription with load document in filter projection](../../../../client-api/data-subscriptions/creation/examples.mdx#create-subscription-with-load-document-in-filter-projection)  
[Create revisions enabled subscription](../../../../client-api/data-subscriptions/creation/examples.mdx#create-revisions-enabled-subscription)  

</Admonition>
## Create subscription on all documents in a collection

Here we create a plain subscription on the Orders collection, without any constraint or transformation.
<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="java">
{`name = store.subscriptions().create(Order.class);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("from Orders");
name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Create subscription with filtering

Here we create a subscription on Orders collection, which total order revenue is greater than 100.
<TabItem value="create_filter_only_RQL" label="create_filter_only_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("declare function getOrderLinesSum(doc) \{" +
    " var sum = 0;" +
    " for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    " return sum;" +
    "\}" +
    "from Orders as o " +
    "where getOrderLinesSum(o) > 100 ");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create subscription with filtering and projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return only ID and total revenue.
<TabItem value="create_filter_and_projection_RQL" label="create_filter_and_projection_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery(" declare function getOrderLinesSum(doc) \{" +
    "  var sum = 0; " +
    "  for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    "  return sum;" +
    "\}" +
    "" +
    " declare function projectOrder(doc) \{" +
    "    return \{" +
    "        Id: order.Id," +
    "        Total: getOrderLinesSum(order)" +
    "    \}" +
    " \}" +
    " from order as o " +
    " where getOrderLinesSum(o) > 100 " +
    " select projectOrder(o)");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create subscription with load document in filter projection

Here we create a subscription on Orders collection, which total order revenue is greater than 100, and return ID, total revenue, shipping address and responsible employee name.

<TabItem value="create_filter_and_load_document_RQL" label="create_filter_and_load_document_RQL">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery(" declare function getOrderLinesSum(doc) \{" +
    "  var sum = 0; " +
    "  for (var i in doc.Lines) \{ sum += doc.Lines[i]; \}" +
    "  return sum;" +
    "\}" +
    "" +
    " declare function projectOrder(doc) \{" +
    "    var employee = LoadDocument(doc.Employee); " +
    "    return \{" +
    "        Id: order.Id," +
    "        Total: getOrderLinesSum(order)," +
    "        ShipTo: order.ShipTo," +
    "        EmployeeName: employee.FirstName + ' ' + employee.LastName " +
    "    \}" +
    " \}" +
    " from order as o " +
    " where getOrderLinesSum(o) > 100 " +
    " select projectOrder(o)");

name = store.subscriptions().create(options);
`}
</CodeBlock>
</TabItem>



## Create revisions enabled subscription

Here we create a subscription on Orders collection, which returns current and previous version of the subscriptions. 
Please see the [page](../../../../client-api/data-subscriptions/advanced-topics/subscription-with-revisioning.mdx) dedicated to subscriptions with revisions for more details and examples.

<Tabs groupId='languageSyntax'>
<TabItem value="Generic-syntax" label="Generic-syntax">
<CodeBlock language="java">
{`name = store.subscriptions().createForRevisions(Order.class);
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL-syntax" label="RQL-syntax">
<CodeBlock language="java">
{`SubscriptionCreationOptions options = new SubscriptionCreationOptions();
options.setQuery("from Orders (Revisions = true)");
name = store.subscriptions().createForRevisions(Order.class, options);
`}
</CodeBlock>
</TabItem>
</Tabs>




